Update text, remove old code and fix CSS transform alignment.

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-50%);
+  transform: translate(-50%,-50%);
   font-size: 50px;
   text-align: center;
 }
